# pastebin

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.dev.yml
.github/: dependabot.yml
.github/workflows/: build-service.yml  build-test-service.yml  ci.yaml  docker.yaml  docker.yml
db/postgresql/: Dockerfile
nginx/: nginx.conf
nginx/conf.d/: paste-service.conf  read-write.conf
paste-service/: .gitignore  CMakeLists.txt  Dockerfile.dev  Makefile  run_as_user.sh
paste-service/.devcontainer/: Dockerfile  README.md  devcontainer.json
paste-service/cmake/: get_cpm.cmake
paste-service/configs/: config_vars.testing.yaml  config_vars.yaml  secdist.json  static_config.yaml
paste-service/postgresql/: Dockerfile
paste-service/src/: greeting.cpp  greeting.hpp  greeting_benchmark.cpp  greeting_test.cpp  hello.cpp  hello.hpp  hello_mongo.cpp  hello_mongo.hpp  hello_postgres.cpp  hello_postgres.hpp  main.cpp
paste-service/tests/: conftest.py  pytest.ini  test_basic.py  test_delete_paste.py  test_get_paste.py  test_mongo.py  test_paste_service.py  test_postgres.py  test_upload_paste.py
services/paste-service/: CMakeLists.txt  Makefile
services/read-service/: .clangd  CMakeLists.txt  CMakePresets.json  Makefile
services/read-service/configs/: static_config.yaml
services/read-service/src/: main.cpp
services/read-service/src/components/: blob_repo.cpp  blob_repo.hpp  metadata_repo.cpp  metadata_repo.hpp
services/read-service/src/handlers/: get_paste.cpp  get_paste.hpp
services/read-service/src/services/: read_service.cpp  read_service.hpp
services/read-service/src/services/dto/: paste_dto.hpp  paste_dto_json.hpp
services/read-service/tests/: conftest.py  test_get_paste.py
services/read-service/tests/fixtures/: api_get_paste.py
services/write-service/: .gitignore  CMakeLists.txt  Makefile  README.md
shared/models/: CMakeLists.txt
tests/: .gitignore  pytest.ini  requirements.txt
tests/e2e/: conftest.py  (+1 more)
(+83 files in other folders)
